samples/_failures_safe/1761481647_7331d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d1c6f88.c: In function ‘main’:
./samples/SAFE/__tmp_0d1c6f88.c:187:16: error: expected expression at end of input
  187 |         struct Token token =
      |                ^~~~~
./samples/SAFE/__tmp_0d1c6f88.c:187:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d1c6f88.c:187:16: error: expected declaration or statement at end of input
